# lemora

./: PLANNED_WORK.md  README.md  pyproject.toml
src/lemora/: __init__.py  cli.py  config.py  gloss.py  main.py  models.py  renderer.py  service.py
src/lemora/adapters/: __init__.py  base.py  lewis_short.py  local_lexicon.py  whitaker.py
src/lemora/llm/: __init__.py  llama_synth.py
src/lemora/nlp/: __init__.py  cltk_analyzer.py
tests/: __init__.py  test_adapters.py  test_cli.py  test_gloss.py  test_llm.py  test_nlp.py  test_renderer.py  test_service.py
