[project]
name = "lemora"
version = "0.1.0"
description = "Local-first Latin study dictionary CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.0",
    "rich>=13.9.4",
]

[project.optional-dependencies]
nlp = [
    "cltk>=1.4.0",
]
llm = [
    "llama-cpp-python>=0.3.16",
]

[project.scripts]
lemora = "lemora.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemora"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["FBT001", "S603", "G004", "S607", "COM812"]
unfixable = [
    "F401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ANN"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
source = ["lemora"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true

